resources/ingress-nginx/multiple-ingress-controllers/public-ingress/ingress-resources/public-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-public-2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-launch-cluster"
spec:
  ingressClassName: public-ingress
  tls:
    - hosts:
      - public-app.launch.dresdencraft.com
      secretName: hello-world-ingress-public-2-tls
  rules:
  - host: public-app.launch.dresdencraft.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
