resources/ingress-nginx/multiple-ingress-controllers/public-ingress/ingress-resources/public-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-public-aws
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: public-ingress
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
spec:
  ingressClassName: public-ingress
  tls:
    - hosts:
        - demo.sandbox.launch.nttdata.com
      secretName: hello-world-ingress-public-tls # pragma: allowlist secret
  rules:
    - host: demo.sandbox.launch.nttdata.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld-two
                port:
                  number: 80
